chore: layout left sidebar panel

--- a/www/docs/hooks/use-clipboard.mdx
+++ b/www/docs/hooks/use-clipboard.mdx
@@ -1,10 +1,11 @@
 ---
-title: Post one
+title: useClipboard
+description: Post one
 ---
 
 This is the first post.
 
-```python hello.py
+```python
 # mark[16:24]
 print("This is Code Hike")
 ```
