chore: add navigation state active on left side panel

--- a/www/docs/hooks/use-clipboard.mdx
+++ b/www/docs/hooks/use-clipboard.mdx
@@ -1,11 +1,6 @@
 ---
 title: useClipboard
-description: Post one
+description: useClipboard
 ---
 
-This is the first post.
-
-```python
-# mark[16:24]
-print("This is Code Hike")
-```
+# useClipboard
