chore(docs): registered self component to markdown render

--- a/www/docs/components/button.mdx
+++ b/www/docs/components/button.mdx
@@ -5,6 +5,14 @@ description: Button
 
 # Button
 
+A button component in a user interface is a graphical element that users can interact with by clicking or tapping. Buttons are a fundamental part of UI design and serve various purposes, such as triggering actions, submitting forms, or navigating between different sections of an application.
+
+<br />
+
+<Button>Default</Button>
+
+<br />
+
 ```tsx page.tsx
 <Button>Default</Button>
 ```
