chore(docs): add toc component

--- a/www/docs/components/button.mdx
+++ b/www/docs/components/button.mdx
@@ -9,6 +9,16 @@ A button component in a user interface is a graphical element that users can int
 
 <br />
 
+## Button Default
+
+### Button Default
+
+#### Button Default
+
+##### Button Default
+
+###### Button Default
+
 <Button>Default</Button>
 
 <br />
