--- a/www/docs/foundations/typography.mdx
+++ b/www/docs/foundations/typography.mdx
@@ -4,3 +4,7 @@ description: Typography
 ---
 
 # Typography
+
+visual representation and styling of text within the application or website. Typography is a crucial aspect of design that not only involves choosing fonts but also encompasses factors such as font size, line spacing, letter spacing, and text color.
+
+<h1>Quest judge wizard bonks foxy chimp love</h1>
