--- a/www/docs/components/button.mdx
+++ b/www/docs/components/button.mdx
@@ -8,21 +8,117 @@ description: Button
 A button component in a user interface is a graphical element that users can interact with by clicking or tapping. Buttons are a fundamental part of UI design and serve various purposes, such as triggering actions, submitting forms, or navigating between different sections of an application.
 
 <br />
+<br />
 
-## Button Default
+#### Install & Usage
 
-### Button Default
+<CH.Code>
+```bash npm
+npm install @codecentrum/piksel-ui
+```
 
-#### Button Default
+```bash yarn
+yarn add @codecentrum/piksel-ui
+```
 
-##### Button Default
+```bash pnpm
+pnpm add @codecentrum/piksel-ui
+```
 
-###### Button Default
+```bash bun
+bun add @codecentrum/piksel-ui
+```
+</CH.Code>
 
-<Button>Default</Button>
+```tsx page.tsx
+import { Button } from '@codecentrum/piksel-ui'
+```
 
 <br />
+
+#### Components
+
+<br />
+
+##### Default
+
+<Button>Default</Button>
 
 ```tsx page.tsx
 <Button>Default</Button>
 ```
+
+<br />
+
+##### Themes
+
+<div className="flex items-center space-x-4 mt-4">
+  <Button themes="secondary">Secondary</Button>
+  <Button themes="info">Info</Button>
+  <Button themes="success">Success</Button>
+  <Button themes="warning">Warning</Button>
+  <Button themes="danger">Danger</Button>
+</div>
+
+<br />
+
+###### Secondary
+
+```tsx secondary.tsx
+<Button themes="secondary">Secondary</Button>
+```
+
+###### Info
+
+```tsx info.tsx
+<Button themes="info">Info</Button>
+```
+
+###### Success
+
+```tsx success.tsx
+<Button themes="success">Success</Button>
+```
+
+###### Warning
+
+```tsx warning.tsx
+<Button themes="warning">Warning</Button>
+```
+
+###### Danger
+
+```tsx danger.tsx
+<Button themes="danger">Danger</Button>
+```
+
+<br />
+
+##### Size
+
+<div className="flex items-center space-x-4">
+  <Button themes="secondary" size="small">Small</Button>
+  <Button themes="secondary">Default</Button>
+  <Button themes="secondary" size="large">Large</Button>
+</div>
+
+<br />
+
+###### Small
+
+```tsx small.tsx
+<Button themes="secondary" size="small">Small</Button>
+```
+
+###### Default
+
+```tsx default.tsx
+<Button themes="secondary">Default</Button>
+```
+
+###### Large
+
+```tsx large.tsx
+<Button themes="secondary" size="large">Large</Button>
+```
+
