--- a/www/docs/hooks/use-page-leave.mdx
+++ b/www/docs/hooks/use-page-leave.mdx
@@ -1,6 +1,64 @@
 ---
 title: usePageLeave
-description: usePageLeave
+description: Calls given function when mouse leaves the page
 ---
 
 # usePageLeave
+
+Calls given function when mouse leaves the page
+
+<br />
+<br />
+
+#### Installation
+
+<CH.Code>
+```bash npm
+npm install @codecentrum/piksel-hooks
+```
+
+```bash yarn
+yarn add @codecentrum/piksel-hooks
+```
+
+```bash pnpm
+pnpm add @codecentrum/piksel-hooks
+```
+
+```bash bun
+bun add @codecentrum/piksel-hooks
+```
+</CH.Code>
+
+```tsx page.tsx
+import { usePageLeave } from '@codecentrum/piksel-hooks'
+```
+
+<br />
+
+#### Preview
+
+<DemoUsePageLeave />
+
+```tsx page.tsx
+import { useState } from 'react'
+import { usePageLeave } from '@codecentrum/piksel-hooks'
+
+export default function DemoUsePageLeave() {
+  const [count, setCount] = useState(0)
+  usePageLeave(() => setCount((prev) => prev + 1))
+  return (
+    <div>
+      <p>Your mouse left the page {count} times</p>
+    </div>
+  )
+}
+```
+
+<br />
+
+#### Definition
+
+```tsx
+function usePageLeave(onPageLeave: () => void): void
+```
