chore(docs): prepare docs component and hooks

--- a/www/docs/components/accordion.mdx
+++ b/www/docs/components/accordion.mdx
@@ -1,6 +1,40 @@
 ---
 title: Accordion
-description: Accordion
+description: Accordion is a user interface pattern that allows you to present information in a collapsible and expandable manner, often used to conserve screen space and provide a more organized and user-friendly experience
 ---
 
 # Accordion
+
+Accordion is a user interface pattern that allows you to present information in a collapsible and expandable manner, often used to conserve screen space and provide a more organized and user-friendly experience
+
+<br />
+<br />
+
+#### Installation
+
+<CH.Code>
+```bash npm
+npm install @codecentrum/piksel-ui
+```
+
+```bash yarn
+yarn add @codecentrum/piksel-ui
+```
+
+```bash pnpm
+pnpm add @codecentrum/piksel-ui
+```
+
+```bash bun
+bun add @codecentrum/piksel-ui
+```
+</CH.Code>
+
+```tsx page.tsx
+import { Accordion } from '@codecentrum/piksel-ui'
+```
+
+<br />
+
+#### Components
+
