--- a/www/docs/components/avatar.mdx
+++ b/www/docs/components/avatar.mdx
@@ -1,6 +1,40 @@
 ---
 title: Avatar
-description: Avatar
+description: Avatar serve as a means of identifying users in online spaces. Instead of displaying the user's real photo, they can use an avatar to represent themselves
 ---
 
 # Avatar
+
+Avatar serve as a means of identifying users in online spaces. Instead of displaying the user's real photo, they can use an avatar to represent themselves
+
+<br />
+<br />
+
+#### Installation
+
+<CH.Code>
+```bash npm
+npm install @codecentrum/piksel-ui
+```
+
+```bash yarn
+yarn add @codecentrum/piksel-ui
+```
+
+```bash pnpm
+pnpm add @codecentrum/piksel-ui
+```
+
+```bash bun
+bun add @codecentrum/piksel-ui
+```
+</CH.Code>
+
+```tsx page.tsx
+import { Avatar } from '@codecentrum/piksel-ui'
+```
+
+<br />
+
+#### Components
+
