--- a/www/docs/components/badge.mdx
+++ b/www/docs/components/badge.mdx
@@ -1,6 +1,40 @@
 ---
 title: Badge
-description: Badge
+description: isual element within a user interface that provides quick, at-a-glance information or status. Badges are often used to highlight specific attributes, actions, or states associated with an element. A badge component typically consists of a concise piece of information, often represented as a label or icon, and is visually distinct from the surrounding content
 ---
 
 # Badge
+
+isual element within a user interface that provides quick, at-a-glance information or status. Badges are often used to highlight specific attributes, actions, or states associated with an element. A badge component typically consists of a concise piece of information, often represented as a label or icon, and is visually distinct from the surrounding content
+
+<br />
+<br />
+
+#### Installation
+
+<CH.Code>
+```bash npm
+npm install @codecentrum/piksel-ui
+```
+
+```bash yarn
+yarn add @codecentrum/piksel-ui
+```
+
+```bash pnpm
+pnpm add @codecentrum/piksel-ui
+```
+
+```bash bun
+bun add @codecentrum/piksel-ui
+```
+</CH.Code>
+
+```tsx page.tsx
+import { Badge } from '@codecentrum/piksel-ui'
+```
+
+<br />
+
+#### Components
+
