--- a/www/docs/components/button.mdx
+++ b/www/docs/components/button.mdx
@@ -36,95 +36,83 @@ import { Button } from '@codecentrum/piksel-ui'
 
 <br />
 
-#### Components
+#### Example
 
 <br />
 
-##### Default
-
-<Button>Default</Button>
-
-```tsx page.tsx
-<Button>Default</Button>
-```
-
-<br />
-
-##### Themes
+##### Theme
 
 <div className="flex items-center space-x-4 mt-4">
-  <Button themes="secondary">Secondary</Button>
-  <Button themes="info">Info</Button>
-  <Button themes="success">Success</Button>
-  <Button themes="warning">Warning</Button>
-  <Button themes="danger">Danger</Button>
+  <Button>Primary</Button>
+  <Button theme="secondary">Secondary</Button>
+  <Button theme="info">Info</Button>
+  <Button theme="success">Success</Button>
+  <Button theme="warning">Warning</Button>
+  <Button theme="danger">Danger</Button>
 </div>
 
 <br />
 
-###### Secondary
+
+```tsx primary.tsx
+<Button>Primary</Button>
+```
 
 ```tsx secondary.tsx
-<Button themes="secondary">Secondary</Button>
+<Button theme="secondary">Secondary</Button>
 ```
 
-###### Info
 
 ```tsx info.tsx
-<Button themes="info">Info</Button>
+<Button theme="info">Info</Button>
 ```
 
-###### Success
 
 ```tsx success.tsx
-<Button themes="success">Success</Button>
+<Button theme="success">Success</Button>
 ```
 
-###### Warning
 
 ```tsx warning.tsx
-<Button themes="warning">Warning</Button>
+<Button theme="warning">Warning</Button>
 ```
 
-###### Danger
 
 ```tsx danger.tsx
-<Button themes="danger">Danger</Button>
+<Button theme="danger">Danger</Button>
 ```
+
 
 <br />
 
 ##### Size
 
 <div className="flex items-center space-x-4">
-  <Button themes="secondary" size="small">Small</Button>
-  <Button themes="secondary">Default</Button>
-  <Button themes="secondary" size="large">Large</Button>
+  <Button theme="secondary" size="small">Small</Button>
+  <Button theme="secondary">Default</Button>
+  <Button theme="secondary" size="large">Large</Button>
 </div>
 
 <br />
 
-###### Small
 
 ```tsx small.tsx
-<Button themes="secondary" size="small">Small</Button>
+<Button theme="secondary" size="small">Small</Button>
 ```
 
-###### Default
 
 ```tsx default.tsx
-<Button themes="secondary">Default</Button>
+<Button theme="secondary">Default</Button>
 ```
 
-###### Large
 
 ```tsx large.tsx
-<Button themes="secondary" size="large">Large</Button>
+<Button theme="secondary" size="large">Large</Button>
 ```
 
 <br />
 
-##### State
+##### Disabled
 
 <div className="flex items-center space-x-4">
   <Button disabled>Disabled</Button>
@@ -132,7 +120,6 @@ import { Button } from '@codecentrum/piksel-ui'
 
 <br />
 
-###### Disabled
 
 ```tsx disabled.tsx
 <Button disabled>Disabled</Button>
