--- a/www/docs/foundations/colors.mdx
+++ b/www/docs/foundations/colors.mdx
@@ -1,6 +1,8 @@
 ---
 title: Colors
-description: Colors
+description: A color palette, in the digital world, refers to the full range of colors that can be displayed on a device screen or other interface, orin some cases, a collection of colors and tools for use in paint and illustration programs. The color palette reveals a lot about the electronic design of the device or technology, and its visual capabilities for human users.
 ---
 
 # Colors
+
+A color palette, in the digital world, refers to the full range of colors that can be displayed on a device screen or other interface, orin some cases, a collection of colors and tools for use in paint and illustration programs. The color palette reveals a lot about the electronic design of the device or technology, and its visual capabilities for human users.
