chore(docs): typoragphy documentation

--- a/www/docs/foundations/typography.mdx
+++ b/www/docs/foundations/typography.mdx
@@ -7,4 +7,121 @@ description: Typography
 
 visual representation and styling of text within the application or website. Typography is a crucial aspect of design that not only involves choosing fonts but also encompasses factors such as font size, line spacing, letter spacing, and text color.
 
+<br />
 
+#### Installation
+
+<CH.Code>
+```bash npm
+npm install @codecentrum/piksel-ui
+```
+
+```bash yarn
+yarn add @codecentrum/piksel-ui
+```
+
+```bash pnpm
+pnpm add @codecentrum/piksel-ui
+```
+
+</CH.Code>
+
+```tsx style.css
+@import "@codecentrum/piksel-ui/dist/style/piksel.css"
+```
+
+<br />
+
+#### Usage
+Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a web page. By default, these heading tags have predefined styles, but they can be further styled using CSS to match the design so we only using the tag HTML
+
+<br />
+
+##### Heading
+
+<br />
+
+###### One
+
+<h1>Quest judge wizard bonks foxy chimp love</h1>
+
+<code className="text-xs">font-size: 40px line-height: 56px</code>
+
+```tsx page.html
+<h1>Quest judge wizard bonks foxy chimp love</h1>
+```
+
+<br />
+
+###### Two
+
+<h2>Quest judge wizard bonks foxy chimp love</h2>
+
+<code className="text-xs">font-size: 32px line-height: 48px</code>
+
+```tsx page.html
+<h2>Quest judge wizard bonks foxy chimp love</h2>
+```
+
+<br />
+
+###### Three
+
+<h3>Quest judge wizard bonks foxy chimp love</h3>
+
+<code className="text-xs">font-size: 28px line-height: 40px</code>
+
+```tsx page.html
+<h3>Quest judge wizard bonks foxy chimp love</h3>
+```
+
+<br />
+
+###### Four
+
+<h4>Quest judge wizard bonks foxy chimp love</h4>
+
+<code className="text-xs">font-size: 24px line-height: 32px</code>
+
+```tsx page.html
+<h4>Quest judge wizard bonks foxy chimp love</h4>
+```
+
+<br />
+
+###### Five
+
+<h5>Quest judge wizard bonks foxy chimp love</h5>
+
+<code className="text-xs">font-size: 20px line-height: 28px</code>
+
+```tsx page.html
+<h5>Quest judge wizard bonks foxy chimp love</h5>
+```
+
+<br />
+
+###### Six
+
+<h6>Quest judge wizard bonks foxy chimp love</h6>
+
+<code className="text-xs">font-size: 16px line-height: 24px</code>
+
+```tsx page.html
+<h6>Quest judge wizard bonks foxy chimp love</h6>
+```
+
+<br />
+
+##### Paragraph
+
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+
+```tsx page.html
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
+recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+```
