chore(docs): fix typography documentation

--- a/www/docs/foundations/typography.mdx
+++ b/www/docs/foundations/typography.mdx
@@ -45,7 +45,7 @@ Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a 
 
 <h1>Quest judge wizard bonks foxy chimp love</h1>
 
-<code className="text-xs">font-size: 40px line-height: 56px</code>
+<code className="text-xs">fontsize 40px, lineheight 56px</code>
 
 ```tsx page.html
 <h1>Quest judge wizard bonks foxy chimp love</h1>
@@ -57,7 +57,7 @@ Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a 
 
 <h2>Quest judge wizard bonks foxy chimp love</h2>
 
-<code className="text-xs">font-size: 32px line-height: 48px</code>
+<code className="text-xs">fontsize 32px, lineheight 48px</code>
 
 ```tsx page.html
 <h2>Quest judge wizard bonks foxy chimp love</h2>
@@ -69,7 +69,7 @@ Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a 
 
 <h3>Quest judge wizard bonks foxy chimp love</h3>
 
-<code className="text-xs">font-size: 28px line-height: 40px</code>
+<code className="text-xs">fontsize 28px, lineheight 40px</code>
 
 ```tsx page.html
 <h3>Quest judge wizard bonks foxy chimp love</h3>
@@ -81,7 +81,7 @@ Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a 
 
 <h4>Quest judge wizard bonks foxy chimp love</h4>
 
-<code className="text-xs">font-size: 24px line-height: 32px</code>
+<code className="text-xs">fontsize 24px, lineheight 32px</code>
 
 ```tsx page.html
 <h4>Quest judge wizard bonks foxy chimp love</h4>
@@ -93,7 +93,7 @@ Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a 
 
 <h5>Quest judge wizard bonks foxy chimp love</h5>
 
-<code className="text-xs">font-size: 20px line-height: 28px</code>
+<code className="text-xs">fontsize 20px, lineheight 28px</code>
 
 ```tsx page.html
 <h5>Quest judge wizard bonks foxy chimp love</h5>
@@ -105,7 +105,7 @@ Headings in HTML h1-h6 represent hierarchical levels of titles or headings on a 
 
 <h6>Quest judge wizard bonks foxy chimp love</h6>
 
-<code className="text-xs">font-size: 16px line-height: 24px</code>
+<code className="text-xs">fontsize 16px, lineheight 24px</code>
 
 ```tsx page.html
 <h6>Quest judge wizard bonks foxy chimp love</h6>
