--- a/www/docs/components/tooltip.mdx
+++ b/www/docs/components/tooltip.mdx
@@ -62,7 +62,7 @@ The preferred side of the trigger to render component
 <div className="mt-4">
   <Tooltip
     side="top"
-    trigger={<Badge variant="soft">Hover Me</Badge>}
+    trigger={<Badge theme="info" variant="soft">Hover Me</Badge>}
     content="This is an explanation"
   />
 </div>
@@ -71,7 +71,7 @@ The preferred side of the trigger to render component
 ```tsx top.tsx
 <Tooltip
   side="top"
-  trigger={<Badge variant="soft">Hover Me</Badge>}
+  trigger={<Badge theme="info" variant="soft">Hover Me</Badge>}
   content="This is an explanation"
 />
 ```
@@ -83,7 +83,7 @@ The preferred side of the trigger to render component
 <div className="mt-4">
   <Tooltip
     side="right"
-    trigger={<Badge variant="soft">Hover Me</Badge>}
+    trigger={<Badge theme="destructive" variant="soft">Hover Me</Badge>}
     content="This is an explanation"
   />
 </div>
@@ -92,7 +92,7 @@ The preferred side of the trigger to render component
 ```tsx right.tsx
 <Tooltip
   side="right"
-  trigger={<Badge variant="soft">Hover Me</Badge>}
+  trigger={<Badge theme="destructive" variant="soft">Hover Me</Badge>}
   content="This is an explanation"
 />
 ```
@@ -104,7 +104,7 @@ The preferred side of the trigger to render component
 <div className="mt-4">
   <Tooltip
     side="bottom"
-    trigger={<Badge variant="soft">Hover Me</Badge>}
+    trigger={<Badge theme="success" variant="soft">Hover Me</Badge>}
     content="This is an explanation"
   />
 </div>
@@ -113,7 +113,7 @@ The preferred side of the trigger to render component
 ```tsx bottom.tsx
 <Tooltip
   side="bottom"
-  trigger={<Badge variant="soft">Hover Me</Badge>}
+  trigger={<Badge theme="success" variant="soft">Hover Me</Badge>}
   content="This is an explanation"
 />
 ```
@@ -125,7 +125,7 @@ The preferred side of the trigger to render component
 <div className="mt-4">
   <Tooltip
     side="left"
-    trigger={<Badge variant="soft">Hover Me</Badge>}
+    trigger={<Badge theme="warning" variant="soft">Hover Me</Badge>}
     content="This is an explanation"
   />
 </div>
@@ -134,7 +134,7 @@ The preferred side of the trigger to render component
 ```tsx left.tsx
 <Tooltip
   side="left"
-  trigger={<Badge variant="soft">Hover Me</Badge>}
+  trigger={<Badge theme="warning" variant="soft">Hover Me</Badge>}
   content="This is an explanation"
 />
 ```
